<resources>
    <string name="app_name">Full Mead Alchemist</string>
    <string name="copyright">© 2017–2018 Full Mead Alchemist, LLC.</string>
    <string name="save_batch">Save Batch</string>
    <string name="add_log_entry">Add Log Entry</string>
    <string name="edit_batch_title">Editing Batch #%d</string>
    <string name="create_batch_title">Create a new Batch</string>
    <string name="user_profile_title">User Details</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_batch">Edit Batch</string>
    <string name="save_entry">Save Log Entry</string>
    <string name="github_url">https://github.com/Kyle-Falconer/Must-Watch-Android</string>
    <string name="email">email</string>
    <string name="recipes">Recipes</string>
    <string name="batches">Batches</string>
    <string name="about">About</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="output_volume">Output Volume</string>
    <string name="target_final_specific_gravity">Target final Specific Gravity</string>
    <string name="target_starting_specific_gravity">Target starting Specific Gravity</string>
    <string name="target_abv">Target ABV</string>
    <string name="carbonation">carbonation</string>
    <string name="none">none</string>
    <string name="create_a_batch_using_this_recipe">create a batch using this recipe</string>
    <string name="qty_amount">amount</string>

    <!-- ================================================================
                            UNITS
    ================================================================= -->
    <string name="UNKNOWN_UNIT">-</string>
    <string name="DEGREES_C">°C</string>
    <string name="DEGREES_F">°F</string>

    <string name="LITER">L</string>
    <string name="GALLON_LIQUID_US">gal (US)</string>
    <string name="GALLON_DRY_US">dry gal (US)</string>
    <string name="OUNCE_LIQUID_US">fl oz (US)</string>
    <string name="GALLON_LIQUID_UK">gal (UK)</string>
    <string name="OUNCE_LIQUID_UK">fl oz (UK)</string>

    <string name="KILOGRAM">kg</string>
    <string name="GRAM">g</string>
    <string name="POUND">lb</string>
    <string name="OUNCE">oz</string>
    <string name="TEASPOON">tsp</string>


    <!-- ================================================================
                        MEAD TYPES
    ================================================================= -->
    <string name="MEAD">mead</string>
    <string name="MEAD_TRADITIONAL">traditional</string>
    <string name="MELOMEL">melomel</string>
    <string name="PYMENT">pyment</string>

    <!-- ================================================================
                                SUGARS
    ================================================================= -->
    <string name="ACEROLA">acerola</string>
    <string name="APPLES">apples</string>
    <string name="APRICOTS__FRESH">apricots</string>
    <string name="APRICOTS__DRIED">apricots, dried</string>
    <string name="BANANAS">bananas</string>
    <string name="BLACKBERRY">blackberry</string>
    <string name="BLUEBERRY">blueberry</string>
    <string name="BOYSENBERRY">boysenberry</string>
    <string name="CANTALOUPE">cantaloupe</string>
    <string name="CARAMBOLA">carambola</string>
    <string name="CARROTS">carrots</string>
    <string name="CASHEWS">cashews</string>
    <string name="CELERY">celery</string>
    <string name="CHERRY__DARK">cherry, dark</string>
    <string name="CHERRY__MONTMORENCY">cherry, montmorency</string>
    <string name="CORN_SYRUP">corn syrup</string>
    <string name="CRABAPPLES">crabapples</string>
    <string name="CRANBERRY">cranberry</string>
    <string name="CURRANT__BLACK">currant, black</string>
    <string name="CURRANT__RED">currant, red</string>
    <string name="DATES">dates</string>
    <string name="DATES__DRIED">dates dried</string>
    <string name="DEWBERRY">dewberry</string>
    <string name="ELDERBERRY">elderberry</string>
    <string name="FIGS">figs</string>
    <string name="FIGS__DRIED">figs, dried</string>
    <string name="GOOSEBERRY">gooseberry</string>
    <string name="GRAPES_CONCORD">grape, concord</string>
    <string name="GRAPES">grapes</string>
    <string name="GRAPEFRUIT">grapefruit</string>
    <string name="GUANABANA">guanabana</string>
    <string name="GUAVAS">guavas</string>
    <string name="HONEY">honey</string>
    <string name="HONEY__BUCKWHEAT">honey, buckwheat</string>
    <string name="HONEY__MIXED_FLORAL">honey, floral</string>
    <string name="HONEY__ORANGE_BLOSSOM">honey, orange blossom</string>
    <string name="HONEY__CLOVER">honey, clover</string>
    <string name="MELON__HONEYDEW">honeydew melon</string>
    <string name="JACKFRUIT">jackfruit</string>
    <string name="KIWIS">kiwis</string>
    <string name="LEMON_JUICE">lemon juice</string>
    <string name="LIME_JUICE">lime juice</string>
    <string name="LITCHI">litchi</string>
    <string name="LOGANBERRY">loganberry</string>
    <string name="MANGOS">mangos</string>
    <string name="MAPLE_SYRUP">maple syrup</string>
    <string name="MAPLE_SAP">maple sap</string>
    <string name="MULBERRY">mulberry</string>
    <string name="NECTARINES">nectarines</string>
    <string name="ORANGE_JUICE">orange juice</string>
    <string name="PAPAYA">papaya</string>
    <string name="PASSIONFRUIT">passionfruit</string>
    <string name="PEACHES">peaches</string>
    <string name="PEARS">pears</string>
    <string name="PERSIMMON">persimmon</string>
    <string name="PINEAPPLES">pineapples</string>
    <string name="PLUMS">plums</string>
    <string name="POMEGRANATES">pomegranates</string>
    <string name="PRICKLY_PEAR">prickly pear</string>
    <string name="PRUNES_DRIED">prunes, dried</string>
    <string name="QUINCES">quinces</string>
    <string name="RAISINS_DRIED">raisins, dried</string>
    <string name="RASPBERRY__BLACK">raspberry, black</string>
    <string name="RASPBERRY__RED">raspberry, red</string>
    <string name="RHUBARB">rhubarb</string>
    <string name="STRAWBERRY">strawberry</string>
    <string name="SUCROSE">ingredient</string>
    <string name="SULTANAS">sultanas</string>
    <string name="TANGERINES">tangerines</string>
    <string name="TANGELO">tangelo</string>
    <string name="TOMATOES">tomatoes</string>
    <string name="WATERMELONS">watermelons</string>
    <string name="WELCHS_GRAPE_JUICE">Welch\'s Grape Juice</string>
    <string name="YOUNGBERRY">youngberry</string>


    <!-- ================================================================
                                YEASTS
    ================================================================= -->
    <string name="LALVIN_EC_1118">Lalvin EC-1118</string>
    <string name="LALVIN_D_47">Lalvin D-47</string>
    <string name="LALVIN_K1_V1116">Lalvin K1-V1116</string>
    <string name="LALVIN_71B_1122">Lalvin 71B-1122</string>
    <string name="SAFALE_US_05">Safale US-05</string>

    <!-- ================================================================
                                NUTRIENTS
    ================================================================= -->
    <string name="DAP">Diammonium Phosphate (DAP)</string>
    <string name="FERMAID_O">Fermaid O</string>
    <string name="FERMAID_K">Fermaid K</string>
    <string name="GOFERM">GoFerm</string>
    <string name="YEAST_HULLS">yeast hulls</string>

    <!-- ================================================================
                            STABILIZER
    ================================================================= -->
    <string name="CAMPDEN">Campden</string>
    <string name="no_ingredient">-</string>


    <string name="open">open</string>
    <string name="close">close</string>

    <string name="BatchFormFragmentTitle">Batch Edit</string>
    <string name="LogListFragmentTitle">Logs</string>
    <string name="RecipeListFragmentTitle">Recipes</string>
    <string name="AddIngredientDialogTitle">Add  or Edit Ingredient</string>
    <string name="TimePickerFragmentTitle">Time</string>
    <string name="DatePickerFragmentTitle">Date</string>
    <string name="AboutFragmentTitle">About</string>
    <string name="BatchListFragmentTitle">Batches</string>
    <string name="RecipeDetailFragmentTitle">Recipe Details</string>
    <string name="BatchDetailFragmentTitle">Batch Details</string>
    <string name="LogFormFragmentTitle">Log Edit</string>
    <string name="github">GitHub</string>
    <string name="github_project_description">This project\'s source code is available on GitHub.\n\nPlease report any issues you experience or feature requests in the Issues section on the project page.</string>
    <string name="save_button_text">add</string>

</resources>
