<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.recipe.RecipeDetailFragment" >

    <data>

        <variable
            name="recipe"
            type="com.fullmeadalchemist.mustwatch.vo.Recipe" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@{recipe.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="Joe's Quick Grape Mead" />

            <LinearLayout
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                tools:divider="@android:drawable/bottom_bar">

                <TextView
                    android:id="@+id/targetABVLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/target_abv"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/targetABV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="15.4%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                tools:divider="@android:drawable/bottom_bar">

                <TextView
                    android:id="@+id/carbonationLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/carbonation"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/carbonation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@{safeUnbox(recipe.carbonation) == 0 ? @string/none : safeUnbox(recipe.carbonation) }"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                tools:divider="@android:drawable/bottom_bar">

                <TextView
                    android:id="@+id/targetSgStartingLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/target_starting_specific_gravity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/targetSgStarting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@{safeUnbox(recipe.startingSG)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="1.115" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                tools:divider="@android:drawable/bottom_bar">

                <TextView
                    android:id="@+id/targetSgFinalLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/target_final_specific_gravity"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/targetSgFinal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@{safeUnbox(recipe.finalSG)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="1.05" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                tools:divider="@android:drawable/bottom_bar">

                <TextView
                    android:id="@+id/outputVolLabel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/output_volume"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/outputVol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:maxLines="1"
                    android:text="@{recipe.outputVol}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="1.05" />
            </LinearLayout>


            <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:lines="4"
                android:text="@{recipe.notes}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_notes_label"
                tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here." />


            <Button
                android:id="@+id/button_create_batch_from_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_a_batch_using_this_recipe" />


        </LinearLayout>
    </ScrollView>
</layout>